<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_orange"
    android:padding="30dp"
    tools:context=".CommonFiles.ForgetPassword_PasswordUpdated">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexalight"
            android:gravity="center"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/color_text_white"
            android:textSize="50sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexalight"
            android:gravity="center"
            android:text="@string/updated"
            android:textAllCaps="true"
            android:textColor="@color/color_text_white"
            android:textSize="50sp" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_tick"
            app:tint="@color/color_text_white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nexabold"
            android:gravity="center"
            android:text="@string/pass_updated_des"
            android:textColor="@color/lightBlack"
            android:textSize="18sp" />

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/color_text_white"
            android:padding="15sp"
            android:text="@string/done"
            android:fontFamily="@font/nexabold"
            android:textColor="@color/color_bg_orange"
            android:textSize="20sp" />

    </LinearLayout>


</ScrollView>