<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="30dp"
    tools:context=".CommonFiles.ForgetPassword_NewCredentials">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/nexabold"
            android:text="@string/word_new"
            android:textAllCaps="true"
            android:textColor="@color/lightBlack"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexalight"
            android:text="@string/credentials"
            android:textAllCaps="true"
            android:textColor="@color/lightBlack"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nexabold"
            android:text="@string/new_credentials_des_1"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nexabold"
            android:text="@string/new_credentials_des_2"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordEdTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/new_password"
                android:textColorHint="@color/lightBlack"
                app:boxStrokeColor="@color/lightBlack"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/lightBlack"
                app:startIconDrawable="@drawable/ic_login_password"
                app:startIconTint="@color/lightBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nexabold"
                    android:inputType="textPassword"

                    android:textColor="@color/lightBlack" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordEdTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/lightBlack"
                app:boxStrokeColor="@color/lightBlack"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/lightBlack"
                app:startIconDrawable="@drawable/ic_login_password"
                app:startIconTint="@color/lightBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nexabold"
                    android:inputType="textPassword"
                    android:textColor="@color/lightBlack" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/lightBlack"
                android:padding="15sp"
                android:text="@string/word_update"
                android:textColor="@color/lightWhite"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>