<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".CommonFiles.ForgetPassword_MakeSelection">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_backbtn"
            app:tint="@color/lightBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/nexabold"
            android:text="@string/make"
            android:textAllCaps="true"
            android:textColor="@color/lightBlack"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexalight"
            android:text="@string/selection"
            android:textAllCaps="true"
            android:textColor="@color/lightBlack"
            android:textSize="55sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nexabold"
            android:text="@string/make_selection_des"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/via_sms_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:padding="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_phone_number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/via_sms_icon">

                <TextView
                    android:id="@+id/via_sms_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexabold"
                    android:text="@string/via_sms"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/via_sms_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/via_sms_txt"
                    android:fontFamily="@font/nexalight"
                    android:text="@string/via_sms_number"
                    android:textColor="@color/lightBlack"
                    android:textSize="15sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/via_smsBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/via_mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:src="@drawable/ic_email" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/via_mail_icon">

                <TextView
                    android:id="@+id/via_mail_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexabold"
                    android:text="@string/via_mail"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/via_mail_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/via_mail_txt"
                    android:fontFamily="@font/nexalight"
                    android:text="@string/via_mail_mailid"
                    android:textColor="@color/lightBlack"
                    android:textSize="15sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/via_mailBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                />

        </RelativeLayout>


    </LinearLayout>

</ScrollView>