<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_orange"
    android:padding="30dp"
    tools:context=".CommonFiles.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_backbtn"
            app:tint="@color/color_text_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/nexalight"
            android:text="@string/forget"
            android:textAllCaps="true"
            android:textColor="@color/color_text_white"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexalight"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/color_text_white"
            android:textSize="55sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nexabold"
            android:text="@string/forgetPassword_des"
            android:textAlignment="center"
            android:textColor="@color/lightBlack"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:ccp_contentColor="@color/color_text_white"
                android:background="@drawable/country_code_blackborder"
                app:ccp_showFullName="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNoEdTxt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phno"
                android:textColorHint="@color/color_text_white"
                app:boxStrokeColor="@color/color_text_white"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/color_text_white"
                app:startIconDrawable="@drawable/ic_phone_number"
                app:startIconTint="@color/color_text_white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/nexabold"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/lightBlack" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/color_text_white"
                android:padding="15sp"
                android:fontFamily="@font/nexabold"
                android:text="@string/next_btn"
                android:textColor="@color/color_bg_orange"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>